register and login success

--- a/index.html
+++ b/index.html
@@ -84,9 +84,11 @@
                 <input type="submit" value="Enter">
                 <br><br>
                 <input type="reset" value="Cancel">
+                <br><br>
+                <button onclick="window.location.href='register.php'">Register</button>
             </div>
-
-            <a href="register.php">Register</a>
+            
+            
         </form>
     </div>
 </body>
